add fake tweets

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,24 @@
           </div>
         </form>
       </section>
+      <article class="tweet">
+        <header>
+          <span class="profile">
+            <img src="/images/newton.png">
+            <span>Newton</span> 
+          </span>
+          <span class="user">@SirIsaac</span>
+        </header>
+        <span class="words">If I have seen further it is by standing on shoulder of giants</span>
+        <footer>
+          <span>10 days ago</span>
+          <span class="icons">
+            <i class="fa-solid fa-flag"></i>
+            <i class="fa-solid fa-retweet"></i>
+            <i class="fa-solid fa-heart">'</i>
+          </span>
+        </footer>
+      </article>
     </main>
   </body>
 </html>
