--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:wght@300;600&display=swap" rel="stylesheet">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- App CSS -->
@@ -59,24 +61,26 @@
           </div>
         </form>
       </section>
-      <article class="tweet">
-        <header>
-          <span class="profile">
-            <img src="/images/newton.png">
-            <span>Newton</span> 
-          </span>
-          <span class="user">@SirIsaac</span>
-        </header>
-        <span class="words">If I have seen further it is by standing on shoulder of giants</span>
-        <footer>
-          <span>10 days ago</span>
-          <span class="icons">
-            <i class="fa-solid fa-flag"></i>
-            <i class="fa-solid fa-retweet"></i>
-            <i class="fa-solid fa-heart">'</i>
-          </span>
-        </footer>
-      </article>
+      <div id="tweets-container">
+        <article class="tweet">
+          <header>
+            <span class="profile">
+              <img src="/images/newton.png">
+              <span>Newton Jr.</span> 
+            </span>
+            <span class="user">@SirIsaacJr</span>
+          </header>
+          <span class="words">If I have seen further it is by standing on the shoulders of giants</span>
+          <footer>
+            <span>10 days ago</span>
+            <span class="icons">
+              <i class="fa-solid fa-flag"></i>
+              <i class="fa-solid fa-retweet"></i>
+              <i class="fa-solid fa-heart">'</i>
+            </span>
+          </footer>
+        </article>
+      </div>
     </main>
   </body>
 </html>
