fetch tweets with AJAX

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets/" method="post">
+        <form id="submit">
           <label for="tweet-text"><b>What are you humming about?</b></label>
           <textarea name="text" id="tweet-text"></textarea>
           <div class="buttonCounter">
@@ -70,7 +70,7 @@
             </span>
             <span class="user">@SirIsaacJr</span>
           </header>
-          <span class="words">If I have seen further it is by standing on the shoulders of giants</span>
+          <span class="words">If I have seen further it is by standing on the shoulders of peanuts</span>
           <footer>
             <span>10 days ago</span>
             <span class="icons">
