refetch tweets on submission

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
         </form>
       </section>
       <div id="tweets-container">
+        <!-- Unused code
         <article class="tweet">
           <header>
             <span class="profile">
@@ -80,6 +81,7 @@
             </span>
           </footer>
         </article>
+        -->
       </div>
     </main>
   </body>
