add warning bar

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,10 @@
       </div>
     </header>
 
+    <div id="warning">
+      <i class="fa-solid fa-circle-exclamation"></i>
+      <i class="fa-solid fa-circle-exclamation"></i>
+    </div>
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
